force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apttus_QPConfig__PriceListId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_QPConfig__PriceListId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the associated price list</description>
    <label>Price List</label>
    <referenceTo>Apttus_Config2__PriceList__c</referenceTo>
    <relationshipLabel>Quotes/Proposals</relationshipLabel>
    <relationshipName>Proposals</relationshipName>
    <type>Lookup</type>
</CustomField>