force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apttus_QPConfig__PurchaseId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_QPConfig__PurchaseId__c</fullName>
    <description>The default purchase identifier associated with the quote/proposal</description>
    <externalId>true</externalId>
    <inlineHelpText>The default purchase identifier associated with the quote/proposal</inlineHelpText>
    <label>Purchase Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>