force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apttus_QPConfig__QTCProfile__c.field-meta.xml
<CustomField>
    <fullName>Apttus_QPConfig__QTCProfile__c</fullName>
    <description>The QTC profile associated with the quote/proposal</description>
    <inlineHelpText>“Regular” will process the quote as a single entity. Select “Split” before clicking on Configure Products to allow the subdivision of the quote into multiple smaller quotes for business/volume related reasons or multiple sold to accounts.</inlineHelpText>
    <label>QTC Profile</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Split</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>