force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apttus_QPConfig__SyncAssetChangesToQuote__c.field-meta.xml
<CustomField>
    <fullName>Apttus_QPConfig__SyncAssetChangesToQuote__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether asset changes are synchronized to open quotes</description>
    <inlineHelpText>Indicates whether asset changes are synchronized to open quotes</inlineHelpText>
    <label>Sync Asset Changes To Quote</label>
    <type>Checkbox</type>
</CustomField>