force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apttus_QPDSign__CheckESignatureStatus__c.field-meta.xml
<CustomField>
    <fullName>Apttus_QPDSign__CheckESignatureStatus__c</fullName>
    <description>Sales Rep checks the eSignature status for a given Quote when Recipients have not yet finished signing</description>
    <formula>IF( 
ISPICKVAL(Apttus_Proposal__Approval_Stage__c,&quot;Presented&quot;), 
HYPERLINK(&quot;/apex/Apttus_DocuApi__DocuSignEnvStatusByEnvId?envelopeparentid=&quot;&amp;Id, IMAGE(&quot;/resource/Apttus_DocuApi__CheckStatus&quot;,&quot;Check eSignature Status&quot;), &quot;_self&quot;), 
NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sales Rep checks the eSignature status for a given Quote when Recipients have not yet finished signing</inlineHelpText>
    <label>Check eSignature Status</label>
    <type>Text</type>
</CustomField>