force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apttus_QPDSign__RecallESignatureRequest__c.field-meta.xml
<CustomField>
    <fullName>Apttus_QPDSign__RecallESignatureRequest__c</fullName>
    <description>Recall E-Signature request</description>
    <formula>IF( 
ISPICKVAL(Apttus_Proposal__Approval_Stage__c,&quot;Presented&quot;), 
HYPERLINK(&quot;/apex/Apttus_DocuApi__DocuSignRecallEnvByEnvId?envelopeparentid=&quot;&amp;Id, IMAGE(&quot;/resource/Apttus_DocuApi__RecallEnvelope&quot;,&quot;Recall E-Signature Request&quot;), &quot;_self&quot;), 
NULL 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Recall E-Signature request</inlineHelpText>
    <label>Recall E-Signature Request</label>
    <type>Text</type>
</CustomField>