force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apttus_QPDSign__SendForESignature__c.field-meta.xml
<CustomField>
    <fullName>Apttus_QPDSign__SendForESignature__c</fullName>
    <description>Sales Rep sends proposal document with DocuSign eSignature Tag for primary contact</description>
    <formula>IF( 
ISPICKVAL(Apttus_Proposal__Approval_Stage__c,&quot;Generated&quot;), 
HYPERLINK(&quot;/apex/Apttus_QPDSign__QPDocuSignCreateEnvelope?id=&quot;&amp;Id, IMAGE(&quot;/resource/Apttus_DocuApi__eSignature&quot;,&quot;Send For eSignatures&quot;), &quot;_self&quot;), 
NULL 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sales Rep sends proposal document with DocuSign eSignature Tag for primary contact</inlineHelpText>
    <label>Send For eSignature</label>
    <type>Text</type>
</CustomField>