force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apttus_QPDSign__ViewESignatureDocument__c.field-meta.xml
<CustomField>
    <fullName>Apttus_QPDSign__ViewESignatureDocument__c</fullName>
    <description>Correct E-Signature document</description>
    <formula>IF(
ISPICKVAL(Apttus_Proposal__Approval_Stage__c,&quot;Presented&quot;),
HYPERLINK(&quot;/apex/Apttus_DocuApi__DocuSignViewExistingEnvelope?envelopeparentid=&quot;&amp;Id, IMAGE(&quot;/resource/Apttus_DocuApi__ViewEnvelope&quot;,&quot;Correct E-Signature Document&quot;), &quot;_blank&quot;),
NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Correct E-Signature document</inlineHelpText>
    <label>Correct E-Signature Document</label>
    <type>Text</type>
</CustomField>