force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/ConfigureProducts__c.field-meta.xml
<CustomField>
    <fullName>ConfigureProducts__c</fullName>
    <formula>IF(
    ISBLANK(Apttus_QPConfig__PriceListId__c),
    NULL,
    HYPERLINK(
        &quot;/apex/Apttus_QPConfig__ProposalConfiguration?id=&quot; &amp;Id &amp; &quot;&amp;flow=ngDefault&quot;,
        IMAGE(
            &quot;/resource/Apttus_QPConfig__Button_Configure&quot;,
            &quot;Configure Products&quot;
        ),
        &quot;_self&quot;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Configure Products</label>
    <type>Text</type>
</CustomField>