force-app/main/default/objects/Apttus_Proposal__Proposal__c/recordTypes/Apttus_Proposal__Proposal.recordType-meta.xml
<RecordType>
    <fullName>Apttus_Proposal__Proposal</fullName>
    <active>true</active>
    <description>Proposal</description>
    <label>Proposal</label>
</RecordType>