force-app/main/default/objects/Apttus_Proposal__Proposal__c/recordTypes/Apttus_Proposal__RFP.recordType-meta.xml
<RecordType>
    <fullName>Apttus_Proposal__RFP</fullName>
    <active>true</active>
    <description>RFP</description>
    <label>RFP</label>
</RecordType>