force-app/main/default/objects/Apttus_Proposal__Proposal__c/listViews/Apttus_Proposal__All.listView-meta.xml
<ListView>
    <fullName>Apttus_Proposal__All</fullName>
    <columns>NAME</columns>
    <columns>Apttus_Proposal__Opportunity__c</columns>
    <columns>Apttus_Proposal__Approval_Stage__c</columns>
    <columns>Apttus_Proposal__Valid_Until_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>ConfigureProducts__c</columns>
    <columns>Accept2__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>