force-app/main/default/objects/Apttus_Proposal__Proposal__c/listViews/Apttus_Proposal__PresentedtoCustomerrecently.listView-meta.xml
<ListView>
    <fullName>Apttus_Proposal__PresentedtoCustomerrecently</fullName>
    <columns>NAME</columns>
    <columns>Apttus_Proposal__Opportunity__c</columns>
    <columns>Apttus_Proposal__Presented_Date__c</columns>
    <columns>Apttus_Proposal__Net_Amount__c</columns>
    <columns>Apttus_Proposal__Valid_Until_Date__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Apttus_Proposal__Presented_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>THIS_MONTH,LAST_MONTH</value>
    </filters>
    <label>Presented to Customer recently</label>
</ListView>