force-app/main/default/objects/Apttus_Proposal__Proposal__c/listViews/Apttus_Proposal__RejectedProposals.listView-meta.xml
<ListView>
    <fullName>Apttus_Proposal__RejectedProposals</fullName>
    <columns>NAME</columns>
    <columns>Apttus_Proposal__Opportunity__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Apttus_Proposal__Approval_Stage__c</field>
        <operation>equals</operation>
        <value>Denied</value>
    </filters>
    <label>Rejected Proposals</label>
</ListView>